syntax = "proto3";
package ru.dmitriyt.dcs.proto;
option java_outer_classname = "SolverLoaderProto";
option java_package = "ru.dmitriyt.dcs.proto";

service SolverLoader {
  // Скачать джарник для решения задачи GetSolverRequest.solver_id
  rpc GetSolver(GetSolverRequest) returns (stream GetSolverResponse);
  // Получить текущий идентификатор задачи, запущенной на сервере
  rpc GetCurrentSolver(GetCurrentSolverRequest) returns (GetCurrentSolverResponse);
}

message GetSolverRequest {
  string solver_id = 1;
}

message GetSolverResponse {
  bytes data = 1;
}

message GetCurrentSolverRequest {}

message GetCurrentSolverResponse {
  string solver_id = 1;
  int32 solver_version = 2;
}